Closed Bug 1038210 Opened 10 years ago Closed 10 years ago

Fix the public destructors for refcounted classes in Windows only code in accessible

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

Details

Attachments

(1 file, 1 obsolete file)

      No description provided.
Assignee: nobody → ehsan
Blocks: winclang
Component: General → Disability Access APIs
Attachment #8455373 - Flags: review?(bjacob)
Attachment #8455373 - Attachment is obsolete: true
Attachment #8455373 - Flags: review?(bjacob)
Attachment #8455628 - Flags: review?(bjacob)
Attachment #8455628 - Flags: review?(bjacob) → review+
https://hg.mozilla.org/mozilla-central/rev/57f5916f07fb
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: