Bug 1038210 - Fix the public destructors for refcounted classes in Windows only code in accessible; r=bjacob