accessible/windows/msaa/ImageAccessibleWrap.h
@@ -26,6 +26,9 @@ public:
 
   // nsISupports
   NS_DECL_ISUPPORTS_INHERITED
+
+protected:
+  ~ImageAccessibleWrap() {}
 };
 
 } // namespace a11y
